--- a/tableorder/src/components/Navbar/NavbarStyle.css
+++ b/tableorder/src/components/Navbar/NavbarStyle.css
@@ -1,12 +1,11 @@
 .nav {
   display: flex;
-  padding: 0.25rem;
+  padding: 0.25rem 0.15rem;
 }
 .nav-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin: 0 0.5rem;
 }
 .nav-center {
   display: flex;
@@ -34,8 +33,8 @@
 }
 
 .nav-number-info .icon {
-  font-size: 1.1rem;
   margin-right: 8px;
+  font-size: 1.1rem;
   line-height: 1;
 }
 .nav-number-table {
@@ -50,8 +49,6 @@
     margin: 0.25rem 0.4rem;
   }
   .nav-container {
-    /* margin: 0.35rem 0; */
-    margin: 0;
     padding: 0;
     justify-content: center;
     position: relative;
@@ -85,8 +82,6 @@
     margin: 0.25rem 0.5rem;
   }
   .nav-container {
-    /* margin: 0.5rem 0; */
-    margin: 0;
     padding: 0;
     justify-content: center;
     position: relative;
@@ -117,11 +112,7 @@
   .nav {
     padding: 0.25rem 0.15rem;
   }
-  .nav-container {
-    /* margin: 0 0.5rem; */
-    /* margin: 0 0.25rem; */
-    margin: 0;
-  }
+
   .nav-center {
     margin-left: 1.25rem;
   }
@@ -134,8 +125,8 @@
     padding: 0.5rem;
   }
   .nav-number-info .icon {
-    font-size: 1.1rem;
     margin-right: 8px;
+    font-size: 1.1rem;
   }
   .nav-number-table {
     font-size: 1.1rem;
@@ -144,13 +135,9 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .nav {
-    /* padding: 0.25rem; */
     padding: 0.25rem 0.175rem;
   }
-  .nav-container {
-    /* margin: 0 0.3rem; */
-    margin: 0;
-  }
+
   .nav-center {
     margin-left: 1.5rem;
   }
@@ -172,18 +159,9 @@
 }
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .nav {
-    /* padding: 0.25rem; */
-    /**/
     padding: 0.25rem 0.2rem;
   }
 
-  .nav-container {
-    /* margin: 0 0.7rem; */
-    /* margin: 0; */
-    /* margin: 0 0.35rem; */
-    /**/
-    margin: 0;
-  }
   .nav-center {
     margin-left: 2rem;
   }
@@ -208,11 +186,6 @@
     padding: 0.25rem;
   }
 
-  .nav-container {
-    /* margin: 0 0.8rem; */
-    /* margin: 0 0.4rem; */
-    margin: 0;
-  }
   .nav-center {
     margin-left: 2.1rem;
   }
