--- a/tableorder/src/components/Modal/OrderComplete/OrderCompleteStyle.css
+++ b/tableorder/src/components/Modal/OrderComplete/OrderCompleteStyle.css
@@ -16,18 +16,15 @@
   transform: translate(-50%, -50%);
   width: 70%;
   height: 80%;
-  /* max-width: 800px; */
-  /* max-height: 500px; */
   max-width: 70vw;
   max-height: 80vh;
+  min-height: 550px;
   padding: 0.25rem;
   display: flex;
   flex-direction: column;
   background-color: #4d4d4d;
   border-radius: 0.25rem;
-  /* overflow: hidden; */
   overflow-y: auto;
-  min-height: 300px;
 }
 .order-title {
   flex: 0 0 64px;
@@ -55,17 +52,17 @@
   padding: 1rem;
   padding-left: 1.3rem;
   background-color: #fff;
-  color: #000;
   font-size: 1.3rem;
   font-weight: bold;
+  color: #000;
 }
 .order-items-list {
   flex: 1;
   padding: 0.4rem 1.25rem;
   margin-bottom: 0.25rem;
+  min-height: 300px;
   background-color: #fff;
   overflow: auto;
-  min-height: 300px;
 }
 .order-item-container {
   display: flex;
@@ -130,6 +127,9 @@
   line-height: 1;
 }
 @media screen and (max-width: 479px) {
+  .show-order-modal-container {
+    overflow-y: auto;
+  }
   .order-modal-content {
     top: 0;
     left: 0;
@@ -140,7 +140,7 @@
     transform: translateY(90px);
     max-width: 800px;
     max-height: calc(100% - 90px);
-    min-height: 500px;
+    min-height: 450px;
   }
   .order-title {
     flex: 0 0 60px;
@@ -154,7 +154,6 @@
     font-size: 1rem;
   }
   .order-message {
-    /* padding: 1rem 0.5rem; */
     padding: 1rem;
     font-size: 1.2rem;
   }
@@ -182,6 +181,9 @@
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
+  .show-order-modal-container {
+    overflow-y: auto;
+  }
   .order-modal-content {
     top: 0;
     left: 0;
@@ -239,9 +241,6 @@
   .order-modal-content {
     width: 70%;
     height: 80%;
-
-    /* max-width: 70vw; */
-    /* max-height: 80vh; */
     max-width: 70vw;
     max-height: 80vh;
     min-height: 550px;
@@ -288,10 +287,9 @@
   .order-modal-content {
     width: 80%;
     height: 70%;
-    /**/
     max-width: 70vw;
     max-height: 80vh;
-    min-height: 650px;
+    min-height: 600px;
   }
   .order-title {
     flex: 0 0 66px;
@@ -335,7 +333,6 @@
   .order-modal-content {
     width: 75%;
     height: 70%;
-    /**/
     max-width: 60vw;
     max-height: 80vh;
     min-height: 550px;
@@ -383,7 +380,6 @@
   .order-modal-content {
     width: 70%;
     height: 70%;
-    /**/
     max-width: 60vw;
     max-height: 80vh;
     min-height: 550px;
