--- a/tableorder/src/components/Section/MenuListStyle.css
+++ b/tableorder/src/components/Section/MenuListStyle.css
@@ -1,19 +1,18 @@
 .section {
   position: relative;
   display: flex;
-  border-radius: 0.25rem;
-  /**/
   padding: 0.2rem 0;
+  border-radius: 0.25rem;
   background-color: rgb(29, 29, 29);
-  overflow: hidden;
+  overflow-y: auto;
 }
+
 .menulist-container {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   padding: 0.125rem;
-  overflow: auto;
 }
 
 .menulist-center {
@@ -27,6 +26,7 @@
   .section {
     margin: 0 0.4rem;
   }
+
   .menulist-center {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-auto-rows: 210px;
@@ -36,10 +36,11 @@
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .section {
     margin: 0 0.5rem;
+    overflow-y: auto;
   }
+
   .menulist-center {
     grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-    /* grid-auto-rows: minmax(230px, 250px); */
     grid-auto-rows: 230px;
     gap: 0.2rem;
   }
@@ -51,7 +52,6 @@
 
   .menulist-center {
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    /* grid-auto-rows: minmax(230px, 280px); */
     grid-auto-rows: 230px;
     gap: 0.225rem;
     margin-top: 0.225rem;
@@ -66,11 +66,9 @@
 
   .menulist-center {
     grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-    /* grid-template-columns: repeat(auto-fit, minmax(185px, 1fr)); */
     grid-auto-rows: minmax(250px, 280px);
     grid-auto-rows: 250px;
     gap: 0.225rem;
-
     margin-top: 0.225rem;
     margin-bottom: 0.225rem;
   }
@@ -82,7 +80,6 @@
 
   .menulist-center {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    /* grid-auto-rows: minmax(280px, 310px); */
     grid-auto-rows: 280px;
     gap: 0.25rem;
     margin-top: 0.25rem;
@@ -95,7 +92,6 @@
   }
   .menulist-center {
     grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-    /* grid-auto-rows: minmax(310px, 340px); */
     grid-auto-rows: 310px;
     gap: 0.25rem;
     margin-top: 0.25rem;
