--- a/tableorder/src/components/Section/MenuListStyle.css
+++ b/tableorder/src/components/Section/MenuListStyle.css
@@ -4,7 +4,7 @@
   padding: 0.2rem 0;
   border-radius: 0.25rem;
   background-color: rgb(29, 29, 29);
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 .menulist-container {
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100%;
   padding: 0.125rem;
+  overflow-y: auto;
 }
 
 .menulist-center {
@@ -25,10 +26,11 @@
 @media screen and (max-width: 479px) {
   .section {
     margin: 0 0.4rem;
+    overflow-y: auto;
   }
 
   .menulist-center {
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     grid-auto-rows: 210px;
     gap: 0.2rem;
   }
@@ -40,7 +42,7 @@
   }
 
   .menulist-center {
-    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
     grid-auto-rows: 230px;
     gap: 0.2rem;
   }
@@ -51,7 +53,7 @@
   }
 
   .menulist-center {
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     grid-auto-rows: 230px;
     gap: 0.225rem;
     margin-top: 0.225rem;
@@ -65,8 +67,7 @@
   }
 
   .menulist-center {
-    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-    grid-auto-rows: minmax(250px, 280px);
+    grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
     grid-auto-rows: 250px;
     gap: 0.225rem;
     margin-top: 0.225rem;
@@ -79,7 +80,7 @@
   }
 
   .menulist-center {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-rows: 280px;
     gap: 0.25rem;
     margin-top: 0.25rem;
